Get Angstrom to render properly on GH

--- a/absolute_binding_free_energies/absolute_binding_free_energies.ipynb
+++ b/absolute_binding_free_energies/absolute_binding_free_energies.ipynb
@@ -105,12 +105,12 @@
     "\n",
     "\\begin{align*}\n",
     "    \\Delta\\textit{G}_{\\textrm{Bind}}^o\n",
-    "    =&\\Delta\\textit{G}_{\\textrm{Free,\\:Discharge}}\n",
-    "    +\\Delta\\textit{G}_{\\textrm{Free,\\:Vanish}}\n",
+    "    =&\\Delta\\textit{G}_{\\textrm{Free, Discharge}}\n",
+    "    +\\Delta\\textit{G}_{\\textrm{Free, Vanish}}\n",
     "    -\\Delta\\textit{G}_{\\textrm{Release}}^o\n",
-    "    -\\Delta\\textit{G}_{\\textrm{Bound,\\:Vanish}}\\\\\n",
-    "    &-\\Delta\\textit{G}_{\\textrm{Bound,\\:Discharge}}\n",
-    "    -\\Delta\\textit{G}_{\\textrm{Bound,\\:Restrain}}\n",
+    "    -\\Delta\\textit{G}_{\\textrm{Bound, Vanish}}\\\\\n",
+    "    &-\\Delta\\textit{G}_{\\textrm{Bound, Discharge}}\n",
+    "    -\\Delta\\textit{G}_{\\textrm{Bound, Restrain}}\n",
     "    +\\Delta\\textit{G}_{\\textrm{Sym. Corr.}}\\\\\n",
     "\\end{align*}\n",
     "\n",
@@ -304,7 +304,7 @@
    "source": [
     "There are two possible methods for selecting the restraints in BioSimSpace - these are:\n",
     "\n",
-    "- \"MDRestraintsGenerator\": This finds the restraints using the package [MDRestraintsGenerator](https://github.com/IAlibay/MDRestraintsGenerator) written by Irfan Alibay. Also see [this paper](https://chemrxiv.org/engage/chemrxiv/article-details/61f8ef518d70c3340514d25c). Candidate sets of Boresch restraints are generated and the fluctuations of the associated Boresch degrees of freedom are tracked over the unrestrained simulation. The optimum Boresch degrees of freedom are then selected as the set having the lowest total variance, and satisfying certain geometric criteria to ensure stability. The force constants of the restraints are set to some pre-defined value (here 10 kcal mol $\\mathrm{^{-1}}$ $\\mathrm{\\AA^{-2}}$ or kcal mol $\\mathrm{^{-1}}$ $\\mathrm{rad^{-2}}$).\n",
+    "- \"MDRestraintsGenerator\": This finds the restraints using the package [MDRestraintsGenerator](https://github.com/IAlibay/MDRestraintsGenerator) written by Irfan Alibay. Also see [this paper](https://chemrxiv.org/engage/chemrxiv/article-details/61f8ef518d70c3340514d25c). Candidate sets of Boresch restraints are generated and the fluctuations of the associated Boresch degrees of freedom are tracked over the unrestrained simulation. The optimum Boresch degrees of freedom are then selected as the set having the lowest total variance, and satisfying certain geometric criteria to ensure stability. The force constants of the restraints are set to some pre-defined value (here 10 kcal mol $\\mathrm{^{-1}}$ &#x212B;$\\mathrm{^{-2}}$ or kcal mol $\\mathrm{^{-1}}$ $\\mathrm{rad^{-2}}$).\n",
     "\n",
     "- \"BSS\": The inbuilt BioSimSpace method. This was inspired by the MDRestraintsGenerator method. The optimum Boresch degrees of freedom are selected in a similar way to MDRestraintsGenerator, although the selection is made based on minimum configurational volume accessible to the restrained non-interacting ligand, rather than total variance, and the force constants are calculated to mimic the native protein-ligand interactions.\n",
     "\n",
@@ -360,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the SOMD restraint string uses atom indices and units of $\\mathrm{\\AA}$, $\\mathrm{rad}$, and $\\mathrm{kcal}$ $\\mathrm{mol^{-1}}$.\n",
+    "Note that the SOMD restraint string uses atom indices and units of &#x212B;, $\\mathrm{rad}$, and $\\mathrm{kcal}$ $\\mathrm{mol^{-1}}$.\n",
     "\n",
     "Let's view the anchor atoms to make sure they're sensible. [This page](https://nglviewer.org/ngl/api/manual/usage/selection-language.html) on the NGLViewer selection language may be helpful."
    ]
