--- a/absolute_binding_free_energies/absolute_binding_free_energies.ipynb
+++ b/absolute_binding_free_energies/absolute_binding_free_energies.ipynb
@@ -128,7 +128,7 @@
     "\\Delta^o\\textit{G}_{\\text{Release}} = -\\textit{k}_\\textit{B}\\textit{T}\\ln{\\frac{V^o}{V_L}\\frac{8\\pi^2}{\\xi_L}}\n",
     "\\end{equation*}\n",
     "\n",
-    "Where $V_L$ and $\\xi_L$ are the effective translational and rotational volumes for the restrained non-interacting ligand, and $V^o$ is the standard state volume (1660 $\\mathrm{\\AA}^3$). The use of the standard state volume makes the correction independent of the size of the simulation box.\n",
+    "Where $V_L$ and $\\xi_L$ are the effective translational and rotational volumes for the restrained non-interacting ligand, and $V^o$ is the standard state volume (1660 &#x212B;). The use of the standard state volume makes the correction independent of the size of the simulation box.\n",
     " \n",
     "<span style=\"color:pink\">Further reading </span>: 7.1.2"
    ]
