Split notebooks and update setup_abfe

--- a/absolute_binding_free_energies/analyse_abfe.ipynb
+++ b/absolute_binding_free_energies/analyse_abfe.ipynb
@@ -4,18 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Issues\n",
-    "\n",
-    "- Analyse method very slow and seems to massively underestimate with MBAR and overestimate with TI. analyse_freenrg in SOMD seems to be much faster and more reliable.\n",
-    "- Need to pull version of SOMD which works with restraints into GH repo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# <span style=\"color:teal\"> Absolute Binding Free Energies and Experimental Features in BioSimSpace</span>\n",
-    "This is the Absolute Binding Free Energy (ABFE) jupyter notebook for the September 2022 CCPBioSim Workshop. This notebook describes how the functionality of BioSimSpace may be extended using the *sandpit*, and how to set up an absolute binding free energy calculation using the functionality present in the Exscientia sandpit.\n",
+    "# <span style=\"color:teal\"> Absolute Binding Free Energies and Experimental Features in BioSimSpace: Analysis</span>\n",
+    "This is the second of two jupyter notebooks on Absolute Binding Free Energy (ABFE) calculations in BioSimSpace for the September 2022 CCPBioSim Workshop. This notebook describes the analysis of ABFE calculations. The first notebook, \"setup_abfe.ipynb\" discussed the integration of experimental features into BioSimSpace through the *sandpit*, and the setup of absolute binding free energy calculations using BioSimSpace.\n",
     "\n",
     "It includes core as well as <span style=\"color:purple\">extra</span> options.\n",
     "\n",
@@ -53,6 +43,31 @@
     "##### <span style=\"color:teal\">Authors</span>  \n",
     " - Finlay Clark (@fjclark)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ideas:\n",
+    "\n",
+    "How reliable 3\n",
+    "\n",
+    "Check overlap - good choices?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -447,15 +462,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:purple\">Extra:</span> Of course, to obtain the overall free energy of binding we must perform the free leg calculations as well, where we discharge and vanish the ligand in a box of water. Set up the free leg simulations using BioSimSpace. You will find the equilibrated input files in input/free_ligand.\n",
+    "##### <span style=\"color:teal\"> Exercise: Setting up the Free Leg Simulation </span>\n",
     "\n",
-    "<span style=\"color:purple\">Extra:</span> Repeat the set up of the bound calculations for GROMACS. Note that the perturabation type must be \"full\" (restraining, discharging and vanishing carried out in a single simulation) and the lambda values should be supplied as a pandas data frame (because GROMACS allows different lambda values to be specified simultaneously for each stage):\n",
+    " Of course, to obtain the overall free energy of binding we must perform the free leg calculations as well, where we discharge and vanish the ligand in a box of water. Set up the free leg simulations using BioSimSpace. You will find the equilibrated input files in input/free_ligand.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FIXME: Set up the free leg simulations "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### <span style=\"color:teal\"> Exercise: Setting up the Bound Stage Calculations for GROMACS </span> <span style=\"color:purple\">(Extra)</span> \n",
+    "Repeat the set up of the bound calculations for GROMACS. Note that the perturbation type must be \"full\" (restraining, discharging and vanishing carried out in a single simulation) and the lambda values should be supplied as a pandas data frame (because GROMACS allows different lambda values to be specified simultaneously for each stage):\n",
     "\n",
     "```Python\n",
     "lam_vals=pd.DataFrame(data={'bonded': [0.0, ... 1.0],\n",
     "                            'coul': [0.0, ... 1.0],\n",
     "                            'vdw':  [0.0, ... 1.0]}))\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FIXME: Set up the bound stage calculations for GROMACS"
    ]
   },
   {
