--- a/absolute_binding_free_energies/setup_abfe.ipynb
+++ b/absolute_binding_free_energies/setup_abfe.ipynb
@@ -36,7 +36,7 @@
     "    2.4 [Marking the Ligand to be Decoupled](#decouple)    \n",
     "    2.5 [Selecting the Restraints](#restraints)    \n",
     "    2.6 [Setting Up the Bound Leg Simulations](#bound)    \n",
-    "    2.7 [Analysis](#analysis)       \n",
+    "    2.7 [Running the ABFE Calculations](#running)       \n",
     "\n",
     " <span style=\"color:pink\">Further reading </span> references some sections of the [LiveComs Best Practices for Alchemical Free Energy Calculations](https://livecomsjournal.org/index.php/livecoms/article/view/v2i1e18378).\n",
     "\n",
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <span style=\"color:teal\">2.2.3 Selecting the Restraints</span>\n",
+    "#### <span style=\"color:teal\">2.5 Selecting the Restraints</span>\n",
     "<a id=\"restraints\"></a>\n",
     "\n",
     "The performance of ABFE calculations can be highly dependent on the restraints used. Considering the simulations connecting states 6 and 7 (see cycle above), we would like the restraints to be weak, so that the unrestrained complex is minimally perturbed and convergence is quickly achieved. However, the fastest convergence of the simulations connecting stages 4, 5, and 6 will likely be achieved by using relatively strong restraints to restrict the configurational volume which must be sampled as much as possible. We can strike a compromise between these opposing requirements by selecting the restraints to mimic native protein-ligand interactions as closely as possible, which allows us to find the strongest possible restraints which minimally perturb the unrestrained fully interacting state.\n",
@@ -576,7 +576,7 @@
    "metadata": {},
    "source": [
     "#### <span style=\"color:teal\">2.7 Running the ABFE Calculations</span>\n",
-    "<a id=\"analysis\"></a>\n",
+    "<a id=\"running\"></a>\n",
     "\n",
     "In reality, we would generally run a large set of calculations including several complete repeat runs. To run such calculations on a cluster, we would recommend taking the approach discussed in the RBFE notebook, using BioSimSpace for the simulation setup and Slurm submission scripts to run the simulations. \n",
     "\n",
