--- a/absolute_binding_free_energies/setup_abfe.ipynb
+++ b/absolute_binding_free_energies/setup_abfe.ipynb
@@ -12,7 +12,7 @@
     "##### <span style=\"color:teal\">Required Knowledge</span> \n",
     " - Basic python\n",
     " - Part 1 of this workshop (Introduction to Alchemistry with BioSimSpace)\n",
-    "    - This should provide a basic overview of the use of BioSimSpace\n",
+    "    - This provides a basic overview of the use of BioSimSpace\n",
     "\n",
     "##### <span style=\"color:teal\">Learning objectives</span>  \n",
     " - Understand how the functionality of BioSimSpace can be extended to include experimental features using the *sandpit*\n",
