Improve setup_abfe notebook

--- a/absolute_binding_free_energies/setup_abfe.ipynb
+++ b/absolute_binding_free_energies/setup_abfe.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "##### <span style=\"color:teal\">Jupyter Cheat Sheet</span>  \n",
     "- To run the currently highlighted cell and move focus to the next cell, hold <kbd>&#x21E7; Shift</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
-    "- To run the currently highlighted cell and keep focus in the same cell, hold <kbd>&#x21E7; Ctri</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
+    "- To run the currently highlighted cell and keep focus in the same cell, hold <kbd>&#x21E7; Ctrl</kbd> and press <kbd>&#x23ce; Enter</kbd>;\n",
     "- To get help for a specific function, place the cursor within the function's brackets, hold <kbd>&#x21E7; Shift</kbd>, and press <kbd>&#x21E5; Tab</kbd>;\n",
     "- You can find the full documentation at [biosimspace.org](https://biosimspace.org).\n",
     "\n",
@@ -83,22 +83,22 @@
     "##### <span style=\"color:teal\">2.1 Theory: A Brief Overview</span>\n",
     "<a id=\"theory\"></a>\n",
     "\n",
-    "While RBFE calculations can be extremely valuable in drug discovery, several important problems lie outside the scope of RBFE calculations:\n",
+    "While relative binding free energy (RBFE) calculations can be very useful in drug discovery, several important problems lie outside the scope of RBFE calculations:\n",
     "\n",
-    "- Calculating the RBFEs of structurally dissimilar ligands to a common target\n",
-    "- Calculating RBFEs of the same ligand to the same protein with different binding poses\n",
-    "- Calculating the RBFEs of the same ligand to different targets\n",
+    "- Calculating the binding free energies of structurally dissimilar ligands to a common target.\n",
+    "- Calculating binding free energies of the same ligand to the same protein with different binding poses. This could be used to rigorously    \"score\" different poses.\n",
+    "- Calculating the binding free energies of the same ligand to different targets. This could be useful to optimise selectivity or promiscuity. \n",
     "\n",
     "Alchemical absolute binding free energy (ABFE) calculations escape these limitations by following a more general thermodynamic cycle in which the ligand’s intermolecular interactions are completely turned off:\n",
     "\n",
-    "<img src=\"images/abfe_cycle_details.png\" width=\"400\"/>\n",
+    "<img src=\"images/abfe_cycle_details.png\" width=\"500\"/>\n",
     "\n",
     "We will refer to the left side of the cycle (where the ligand is in solution) as the \"free leg\", and the right side of the cycle (where the ligand is bound) as the \"bound leg\". The simulations represented by individual arrows will be called \"stages\".\n",
     "\n",
     "The absolute binding free energy can be obtained by adding up the terms round our free energy cycle, not forgetting any [symmetry corrections](https://aip.scitation.org/doi/full/10.1063/5.0046853) (for example if there is more than 1 symmetrical binding site per protein):\n",
     "\n",
     "\\begin{align*}\n",
-    "    \\Delta\\textit{G}_{\\textrm{Bind}}^o\n",
+    "    \\Delta\\textit{G}^o_{\\textrm{Bind}}\n",
     "    =&\\Delta\\textit{G}_{\\textrm{Free, Discharge}}\n",
     "    +\\Delta\\textit{G}_{\\textrm{Free, Vanish}}\n",
     "    -\\Delta\\textit{G}_{\\textrm{Release}}^o\n",
@@ -110,7 +110,7 @@
     "\n",
     "The price paid for greater generality is that these calculations are generally harder to converge, as a result of the larger \"perturbation\" made (complete removal of the ligand).\n",
     "\n",
-    "In some ways ABFE calculations are more simple than RBFE calculations, in that we do not need to align and merge two ligands. However, ABFE calculations require receptor-ligand restraints (these are shown by the red dotted lines above) in order to prevent sampling issues. Among other issues, without restraints the ligand would float away from the binding site as the ligand's intermolecular interactions were removed. In order to obtain converged free energies of binding, we would have to be sure that the ligand was sampling outside the binding site as soon as this became thermodynamically favourable, and that we were correctly estimating the ratios of the sizes of the simulation box to the binding site; in practice, this is not feasible.\n",
+    "In some ways ABFE calculations are simpler than RBFE calculations, in that we do not need to align and merge two ligands. However, ABFE calculations require receptor-ligand restraints (these are shown by the red dotted lines above) in order to prevent sampling issues. Among other issues, without restraints the ligand would float away from the binding site as the ligand's intermolecular interactions were removed. In order to obtain converged free energies of binding, we would have to be sure that the ligand was sampling outside the binding site as soon as the unbound state became comparable in free energy to the bound state, and that we were correctly estimating the ratios of the sizes of the simulation box to the binding site; in practice, this is not feasible.\n",
     "\n",
     "Here, we will use a very popular set of receptor-ligand restraints originally proposed by [Boresch et al.](https://pubs.acs.org/doi/full/10.1021/jp0217839) which restrain all 6 external degrees of freedom (three translational and three rotational) of the ligand with respect to the receptor. This is done by imposing harmonic restraints on one distance, two angles, and three dihedral angles defined by three anchor points in the protein (P1-3) and three in the ligand (L1-3):\n",
     "\n",
@@ -119,10 +119,10 @@
     "It is important to correct for the presence of restraints. Intuitively, we can see that the volume accessible to the non-interacting ligand in state 3 will be different to that accessible in state 4 with the restraints applied, so there must be a free energy change. The standard free energy of releasing the restraint is calculated according to:\n",
     "\n",
     "\\begin{equation*}\n",
-    "\\Delta^o\\textit{G}_{\\text{Release}} = -\\textit{k}_\\textit{B}\\textit{T}\\ln{\\frac{V^o}{V_L}\\frac{8\\pi^2}{\\xi_L}}\n",
+    "\\Delta\\textit{G}^o_{\\text{Release}} = -\\textit{k}_\\textit{B}\\textit{T}\\ln{\\frac{V^o}{V_L}\\frac{8\\pi^2}{\\xi_L}}\n",
     "\\end{equation*}\n",
     "\n",
-    "Where $V_L$ and $\\xi_L$ are the effective translational and rotational volumes for the restrained non-interacting ligand, and $V^o$ is the standard state volume (1660 &#x212B;). The use of the standard state volume makes the correction independent of the size of the simulation box.\n",
+    "Where $V_L$ and $\\xi_L$ are the effective translational and rotational volumes for the restrained non-interacting ligand, and $V^o$ is the standard state volume (1660 &#x212B;$^3$, which corresponds to 1 mol l $^{-1}$).  The use of the standard state volume makes the correction independent of the size of the simulation box. $8\\pi^2$ is the rotational \"volume\" of an unrestrained ligand. Imagine pointing the z axis of a 3D Cartesian coordinate system anywhere on the surface of a sphere - this gives a contribution of $4\\pi$ steradians. For each orientation of the z axis, the x and y axes can be rotated through $2\\pi$ radians, giving a total of $2\\pi4\\pi = 8\\pi^2$.\n",
     " \n",
     "<span style=\"color:pink\">Further reading </span>: 7.1.2"
    ]
@@ -139,11 +139,11 @@
     "#### <span style=\"color:teal\">2.3 Loading the System</span>\n",
     "<a id=\"loading\"></a>\n",
     "\n",
-    "We will assume that you already have an equilibrated system ready for simulation. For details on how to do this in BioSimSpace, see the [introductory tutorials](https://github.com/michellab/BioSimSpaceTutorials/tree/main/01_introduction). Here, we'll be using the [human macrophage migration inhibitory factor (MIF) / MIF180 complex](https://pubs.acs.org/doi/full/10.1021/acs.jpcb.9b07588):\n",
+    "We will assume that you already have an equilibrated system ready for simulation. For details on how to do this in BioSimSpace, see the [introductory tutorials](https://github.com/michellab/BioSimSpaceTutorials/tree/main/01_introduction). Here, we'll be using the complex of [human macrophage migration inhibitory factor (MIF) and the ligand MIF-180](https://pubs.acs.org/doi/full/10.1021/acs.jpcb.9b07588):\n",
     "\n",
     "<img src=\"images/mif_mif180.png\" width=\"400\"/>\n",
     "\n",
-    "The equilibrated input files are available in input/complex."
+    "The equilibrated input files are available in `input/complex`."
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can check the name using the `getResidues` method:"
+    "We can check the name using the `getResidues` method of the molecule:"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are using \"decouple\" in the sense of [Gilson et al.](https://www.sciencedirect.com/science/article/pii/S0006349597787563) to mean removal of at least the intermolecular interactions (and optionally all intramolecular non-bonded interactions) of the ligand in the presence of restraints."
+    "We are using \"decouple\" in the sense of [Gilson et al.](https://www.sciencedirect.com/science/article/pii/S0006349597787563) to mean removal of at least the intermolecular interactions (and optionally all intramolecular non-bonded interactions) of the ligand in the presence of restraints, but be aware that it can have a different meaning (see [reference 61](https://aip.scitation.org/doi/full/10.1063/1.2221683))."
    ]
   },
   {
@@ -264,9 +264,13 @@
     "BioSimSpace allows you to select Boresch restraints in an automated way, by running an unrestrained simulation of the fully interacting complex to allow the dynamics of the ligand with respect to the protein to be analysed. This is done using the `BSS.FreeEnergy.RestraintSearch` class, which is used to run and analyse the simulation to generate the restraints:\n",
     "\n",
     "```Python\n",
+    "# Create a protocol for the unrestrained simulation\n",
     "protocol = BSS.Protocol.Production(runtime=5*BSS.Units.Time.nanosecond)\n",
+    "# Create a RestraintSearch object to run and analyse the simulation\n",
     "restraint_search = BSS.FreeEnergy.RestraintSearch(system, protocol=protocol, engine='gromacs', work_dir='output/restraint_search')\n",
+    "# Run the simulation\n",
     "restraint_search.start()\n",
+    "# Wait for the simulation to finish (block=True), then analyse the simulation to find the restraints\n",
     "restraint = restraint_search.analyse(method='BSS', block=True)\n",
     "```\n",
     "\n",
@@ -365,25 +369,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the SOMD restraint string uses atom indices and units of &#x212B;, $\\mathrm{rad}$, and $\\mathrm{kcal}$ $\\mathrm{mol^{-1}}$.\n",
+    "Note that the SOMD restraint string uses atom indices and units of &#x212B;, $\\mathrm{rad}$, and $\\mathrm{kcal}$ $\\mathrm{mol^{-1}}$. Also, the force constants, $k$, are defined as $E = k(x - x_0)^2$. This means that the force constants are halved in order to be consistent with the definition $E = \\frac{1}{2} k(x - x_0)^2$.\n",
     "\n",
     "##### <span style=\"color:teal\"> Exercise: Visualise the Anchor Points </span>\n",
     "\n",
     "Let's view the anchor atoms to make sure they're sensible. [This page](https://nglviewer.org/ngl/api/manual/usage/selection-language.html) on the NGLViewer selection language may be helpful. To view the anchor atoms:\n",
     "\n",
     "- Run the cell below\n",
-    "- Go to the representation tab\n",
-    "- Remove the current representation\n",
+    "- For the default ball and stick representation, select only the ligand atoms\n",
     "\n",
-    "<img src=\"images/ngl_1.png\" width=\"800\"/>\n",
+    "<img src=\"images/ngl_new_1.png\" width=\"400\"/>\n",
     "\n",
-    "- Add a \"cartoon\" representation with the selection \"protein\"\n",
+    "- Click on the menu\n",
     "\n",
+    "<img src=\"images/ngl__new_2.png\" width=\"400\"/>\n",
     "\n",
-    "<img src=\"images/ngl_2.png\" width=\"800\"/>\n",
+    "- Create a new \"cartoon\" representation. This will only display the protein\n",
     "\n",
-    "- Add a \"ball+stick\" representation with the selection \"ligand\"\n",
-    "- Add a \"hyperball\" (a little hard to see) or a \"spacefill\" (a bit large) representation with the selection \"@idx1,idx2,id3,...\" where the idxs are the indices of the anchor points"
+    "<img src=\"images/ngl__new_3.png\" width=\"400\"/>\n",
+    "\n",
+    "- To visualise the anchor points, add a \"spacefill\" representation. Then input the selection \"@idx1,idx2,id3,...\" where the idxs are the indices of the anchor points"
    ]
   },
   {
@@ -424,9 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FIXME: Modify the restraint search so that only anchor points in the triazole ring of the ligand are selected\n",
-    "restraint = BSS.FreeEnergy.RestraintSearch.analyse(\"output/restraint_search\", system, traj, \n",
-    "                                                    298 * BSS.Units.Temperature.kelvin, method='BSS', append_to_lig_selection=\"name CAR CAL NAV NAM NAN\")"
+    "# FIXME: Modify the restraint search so that only anchor points in the triazole ring of the ligand are selected"
    ]
   },
   {
@@ -445,17 +448,17 @@
     "#### <span style=\"color:teal\">2.6 Setting Up The Bound Leg Simulations</span>\n",
     "<a id=\"bound\"></a>\n",
     "\n",
-    "Now that we have our restraints, we can set up the bound leg simulations. These are managed by `BSS.FreeEnergy.Absolute`. We will need to run three bound leg simulations to account for turning on the restraints, discharging (Coulombic interactions) the ligand, and vanishing (Lennard-Jones interactions) the ligand. Note that the perturbation types required for these stages are \"restraint\", \"discharge_soft\", and \"vanish_soft\", respectively.\n",
+    "Now that we have our restraints, we can set up the bound leg simulations. These are managed by `BSS.FreeEnergy.Absolute`. We will need to run three bound leg simulations to account for turning on the restraints, discharging (Coulombic interactions), and vanishing (Lennard-Jones interactions) the ligand. Note that the perturbation types required for these stages are \"restraint\", \"discharge_soft\", and \"vanish_soft\", respectively.\n",
     "\n",
-    "One important parameter is the number of $\\mathrm{\\lambda}$ windows selected, as their number and spacing will affect the reliability of the free energy estimates in an estimator-dependent way. We plan to use the multistate Bennett acceptance ratio (MBAR), which requires sufficient phase space overlap between adjacent $\\mathrm{\\lambda}$ windows - we must have a high enough probability of observing the samples we generate at one value of $\\mathrm{\\lambda}$ at the neighbouring values of $\\mathrm{\\lambda}$. Unfortunately, the optimum set of $\\mathrm{\\lambda}$ values is system specific and is not easily predicted before running any simulations. For this system, we ran a test simulation with a set of lambda windows taken from a previous study and added or removed windows to ensure sufficient overlap without having too many windows, which would be a waste of simulation time. \n",
+    "One important parameter is the number of $\\mathrm{\\lambda}$ windows selected, as their number and spacing will affect the reliability of the free energy estimates in an estimator-dependent way. We plan to use the [multistate Bennett acceptance ratio (MBAR)](https://aip.scitation.org/doi/full/10.1063/1.2978177), which requires sufficient phase space overlap between adjacent $\\mathrm{\\lambda}$ windows - we must have a high enough probability of observing the samples we generate at one value of $\\mathrm{\\lambda}$ at the neighbouring values of $\\mathrm{\\lambda}$. Unfortunately, the optimum set of $\\mathrm{\\lambda}$ values is system-specific and is not easily predicted before running any simulations. For this system, we ran a test simulation with a set of lambda windows taken from a previous study and added or removed windows to ensure sufficient overlap without having too many windows, which would be a waste of simulation time. \n",
     "\n",
     "An example overlap matrix (discharge stage of the bound leg) for the final set of $\\mathrm{\\lambda}$ windows is shown below:\n",
     "\n",
     "<img src=\"images/overlap_mat.png\" width=\"400\"/>\n",
     "\n",
-    "The first off-diagonal terms are sufficiently large (much greater than 0.03), indicating good overlap and giving us some confidence that our estimator will be reliable.\n",
+    "The first off-diagonal terms are sufficiently large (much greater than 0.03), indicating good overlap and giving us some confidence that the MBAR estimate will be reliable.\n",
     "\n",
-    "<span style=\"color:pink\">Further reading </span>: 8.3 (The multistate Bennett acceptance ratio (MBAR)), 8.5 (Overlap matrix)\n",
+    "<span style=\"color:pink\">Further reading </span>: 8.3 (The multistate Bennett acceptance ratio), 8.5 (Overlap matrix)\n",
     "\n",
     "Note that initially, the output directory does not contain \"restrain\" and \"discharge\" directories:"
    ]
