Make exercises skyblue

--- a/absolute_binding_free_energies/setup_abfe.ipynb
+++ b/absolute_binding_free_energies/setup_abfe.ipynb
@@ -304,7 +304,7 @@
     "\n",
     " We've used the BSS method, but feel free to try the MDAnalysis method. It's always a good idea to check the distributions of the Boresch degrees of freedom over the course of the simulations and their values against simulation time (both are provided when using the BSS method, but MDRestraintsGenerator only provides the former). Check the output directory to see the plots.\n",
     "\n",
-    "##### <span style=\"color:teal\"> Exercise: Issues with Restraint Selection </span> <span style=\"color:purple\">(Extra)</span> \n",
+    "##### <span style=\"color:skyblue\"> Exercise: Issues with Restraint Selection </span> <span style=\"color:purple\">(Extra)</span> \n",
     "What issues could arise during the restraint selection stage? How might the plots mentioned above help to diagnose some of these issues?\n"
    ]
   },
@@ -371,7 +371,7 @@
    "source": [
     "Note that the SOMD restraint string uses atom indices and units of &#x212B;, $\\mathrm{rad}$, and $\\mathrm{kcal}$ $\\mathrm{mol^{-1}}$. Also, the force constants, $k$, are defined as $E = k(x - x_0)^2$. This means that the force constants are halved in order to be consistent with the definition $E = \\frac{1}{2} k(x - x_0)^2$.\n",
     "\n",
-    "##### <span style=\"color:teal\"> Exercise: Visualise the Anchor Points </span>\n",
+    "##### <span style=\"color:skyblue\"> Exercise: Visualise the Anchor Points </span>\n",
     "\n",
     "Let's view the anchor atoms to make sure they're sensible. [This page](https://nglviewer.org/ngl/api/manual/usage/selection-language.html) on the NGLViewer selection language may be helpful. To view the anchor atoms:\n",
     "\n",
@@ -408,7 +408,7 @@
    "source": [
     "Do the selected anchor points appear reasonable? Why have they been selected?\n",
     "\n",
-    "##### <span style=\"color:teal\"> Exercise: Modify the Restraint Selection </span> <span style=\"color:purple\">(Extra)</span> \n",
+    "##### <span style=\"color:skyblue\"> Exercise: Modify the Restraint Selection </span> <span style=\"color:purple\">(Extra)</span> \n",
     "\n",
     "Repeat the restraints derivation but modify the behaviour of BSS.FreeEnergy.RestraintSearch.analyse so that ligand anchor atoms in the triazole ring are selected. You can obtain the atom names by hovering the cursor in NGLView. Multiple atoms can be selected by name in the [MDAnalysis atom selection language](https://userguide.mdanalysis.org/stable/selections.html) as \"name atname1 atname2 atname3...\""
    ]
@@ -517,7 +517,7 @@
     "```\n",
     "However, these would take many hours to run, so we'll avoid starting them now.\n",
     "\n",
-    "##### <span style=\"color:teal\"> Exercise: Set Up the Vanish Stage Calculations </span>\n",
+    "##### <span style=\"color:skyblue\"> Exercise: Set Up the Vanish Stage Calculations </span>\n",
     "\n",
     "Now it's your turn: complete the code below to set up the vanish stage calculations for the vanish stage, using SOMD and a 1 fs timestep:"
    ]
@@ -540,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <span style=\"color:teal\"> Exercise: Setting up the Free Leg Simulations </span> <span style=\"color:purple\">(Extra)</span>\n",
+    "##### <span style=\"color:skyblue\"> Exercise: Setting up the Free Leg Simulations </span> <span style=\"color:purple\">(Extra)</span>\n",
     " Of course, to obtain the overall free energy of binding we must perform the free leg calculations as well, where we discharge and vanish the ligand in a box of water. Set up the free leg simulations using BioSimSpace. You will find the equilibrated input files in input/free_ligand."
    ]
   },
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <span style=\"color:teal\"> Exercise: Setting up the Bound Stage Calculations for GROMACS </span> <span style=\"color:purple\">(Extra)</span> \n",
+    "##### <span style=\"color:skyblue\"> Exercise: Setting up the Bound Stage Calculations for GROMACS </span> <span style=\"color:purple\">(Extra)</span> \n",
     "Repeat the set up of the bound calculations for GROMACS. Note that the perturbation type must be \"full\" (restraining, discharging and vanishing carried out in a single simulation) and the lambda values should be supplied as a pandas data frame (because GROMACS allows different lambda values to be specified simultaneously for each stage):\n",
     "\n",
     "```Python\n",
@@ -573,6 +573,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "# FIXME: Set up the bound simulations for GROMACS"
    ]
   },
