Make exercises skyblue

--- a/absolute_binding_free_energies/analyse_abfe.ipynb
+++ b/absolute_binding_free_energies/analyse_abfe.ipynb
@@ -99,9 +99,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <span style=\"color:teal\"> Exercise: Inspect the Overlap Matrices </span>\n",
+    "##### <span style=\"color:skyblue\"> Exercise: Inspect the Overlap Matrices </span>\n",
     "\n",
-    "As discussed in the previous notebook, sufficient overlap is required for the MBAR estimator to be reliable. Plot the overlap matrices for run001, for all stages for the bound and free legs. Have a sufficient number of $\\mathrm{\\lambda}$ values been used for all simulations? Can you suggest improvements to the spacing or number of $\\mathrm{\\lambda}$ windows for any stage?"
+    "As discussed in the previous notebook, sufficient overlap is required for the MBAR estimator to be reliable. Plot the overlap matrices for run001, for all stages for the bound and free legs, using `BSS.FreeEnergy.Absolute.plot`. Have a sufficient number of $\\mathrm{\\lambda}$ values been used for all simulations? Can you suggest improvements to the spacing or number of $\\mathrm{\\lambda}$ windows for any stage?"
    ]
   },
   {
@@ -110,11 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_overlap(data):\n",
-    "    overlap_mat = sns.heatmap(data ,square=True, linewidths=.5,\n",
-    "                            cbar_kws={\"label\": \"Overlap\"})\n",
-    "    overlap_mat.set_xlabel(\"$\\mathrm{\\lambda}$ Index\")\n",
-    "    overlap_mat.set_ylabel(\"$\\mathrm{\\lambda}$ Index\")"
+    "BSS.FreeEnergy.Absolute.plot?"
    ]
   },
   {
@@ -166,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <span style=\"color:teal\"> Exercise: Find the Free Energy of Binding </span>\n",
+    "##### <span style=\"color:skyblue\"> Exercise: Find the Free Energy of Binding </span>\n",
     "\n",
     "Estimate $\\Delta\\textit{G}_{\\textrm{Bind}}^o$ for run 1 by adding up all the terms around the free energy cycle:\n",
     "\n",
@@ -294,7 +290,7 @@
     "\n",
     "A minimal test of reproducibility is performing replicate runs where all atoms are assigned different initial velocities. This was done to produce the data provided for runs 1 - 5 in `example_output`. Even better, we could have used different starting structures extracted from a simulation of the complex.\n",
     "\n",
-    "##### <span style=\"color:teal\"> Exercise: Deviation Between Replicate Runs </span>\n",
+    "##### <span style=\"color:skyblue\"> Exercise: Deviation Between Replicate Runs </span>\n",
     "\n",
     "Analyse the data for the 5 replicate runs for the vanish stage of the bound leg to provide a revised estimate of the free energy change for this stage. Calculate a new measure of the uncertainty for this stage, and compare it to the uncertainty estimate obtained for a single run. "
    ]
@@ -347,7 +343,7 @@
     "\n",
     "<span style=\"color:pink\">Further reading </span>: 8.1 (Detecting the boundary between equilibrated and production regions), The multistate Bennett acceptance ratio), 8.5 (Convergence of simulations)\n",
     "\n",
-    "##### <span style=\"color:teal\"> Exercise: Discrepancies Between Runs </span> <span style=\"color:purple\">(Extra)</span>\n",
+    "##### <span style=\"color:skyblue\"> Exercise: Discrepancies Between Runs </span> <span style=\"color:purple\">(Extra)</span>\n",
     "\n",
     "Although the average results based on all runs seem fairly stable, the individual trajectories do not appear to be converging to a single estimate, as we would expect if all relevant regions of configuration space were sampled at equilibrium during every run. Suggest an explanation for this."
    ]
@@ -384,7 +380,7 @@
     "\n",
     "Where the subscripts 1 and 2 indicate alternative binding poses. \n",
     "\n",
-    "##### <span style=\"color:teal\"> Exercise: Deviation Between Replicate Runs </span>\n",
+    "##### <span style=\"color:skyblue\"> Exercise: Deviation Between Replicate Runs </span>\n",
     "\n",
     "Calculate the overall binding free energy by combining the estimates from the two different poses. Propagate the error."
    ]
@@ -409,7 +405,7 @@
     "\n",
     "Symmetry corrections are required when there is some symmetry in the energy of they system which is broken by the introduction of restraints, but only when the symmetric energy minima are not sampled at all as the restraints are introduced. If there is sampling of all symmetry-related regions of configurations space as the restraints are introduced then a correction is not required, and if there is partial sampling then this represents a sampling issue. For example, imagine we have a ligand with two symmetry-related binding modes. If restraints are introduced which completely prevent sampling of one of the poses, and this pose is not sampled at all as the restraints are turned on, then a symmetry correction of $-k_BT\\ln2$ is required. This recovers the free energy change which would have been observed during the restraining simulations had the other binding pose been sampled.\n",
     "\n",
-    "##### <span style=\"color:teal\"> Exercise: The Final Result </span> \n",
+    "##### <span style=\"color:skyblue\"> Exercise: The Final Result </span> \n",
     "\n",
     "Look at the structure of MIF, a homotrimer:\n",
     "\n",
@@ -431,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### <span style=\"color:teal\"> Exercise: Other Symmetry Corrections </span> <span style=\"color:purple\">(Extra)</span>\n",
+    "##### <span style=\"color:skyblue\"> Exercise: Other Symmetry Corrections </span> <span style=\"color:purple\">(Extra)</span>\n",
     "\n",
     "Can you think of another case for this system where symmetry corrections might be required?"
    ]
